[package]
name = "canyon"
description = "Implementation of https://canyon-network.io node in Rust based on the Substrate framework."
license = "GPL-3.0"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"
readme = "README.md"

[workspace]
resolver = "2"

members = [
    "cli",
    "client/poa",
    "client/proposer",
    "executor",
    "inspect",
    "pallets/permastore",
    "pallets/poa",
    "primitives",
    "primitives/permastore",
    "rpc",
    "runtime",
]

[[bin]]
name = "canyon"
path = "src/main.rs"
required-features = ["canyon-cli/cli"]

[dependencies]
sc-cli = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

canyon-cli = { path = "cli" }

[patch."https://github.com/canyon-network/substrate"]
sp-api = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-application-crypto = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-authority-discovery = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-authorship = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-block-builder = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-blockchain = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-consensus = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-consensus-babe = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-core = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-finality-grandpa = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-inherents = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-io = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-keyring = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-keystore = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-npos-elections = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-offchain = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-runtime = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-sandbox = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-session = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-staking = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-state-machine = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-std = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-timestamp = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-transaction-pool = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-trie = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sp-version = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }

sc-authority-discovery = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-basic-authorship = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-chain-spec = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-cli = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-client-api = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-client-db = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-consensus = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-consensus-babe = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-consensus-babe-rpc = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-consensus-epochs = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-consensus-slots = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-consensus-uncles = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-executor = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-finality-grandpa-warp-sync = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-network = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-offchain = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-rpc = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-rpc-api = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-service = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1"  }
sc-sync-state-rpc = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1"  }
sc-telemetry = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-transaction-pool = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-finality-grandpa = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
sc-tracing = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }

pallet-assets = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-authority-discovery = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-authorship = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-babe = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-balances = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-bounties = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-collective = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-democracy = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-election-provider-multi-phase = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-elections-phragmen = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-gilt = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-grandpa = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-im-online = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-indices = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-identity = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-lottery = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-membership = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-mmr = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-mmr-primitives = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-multisig = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-offences = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-offences-benchmarking = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-proxy = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-randomness-collective-flip = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-session = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1", features = ["historical"] }
pallet-session-benchmarking = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-staking = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-staking-reward-curve = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-scheduler = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-sudo = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-timestamp = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-tips = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-treasury = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-utility = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-transaction-payment = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
pallet-vesting = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }

frame-benchmarking = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
frame-benchmarking-cli = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
frame-election-provider-support = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
frame-executive = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
frame-support = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
frame-system = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
frame-system-benchmarking = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
frame-system-rpc-runtime-api = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }
frame-try-runtime = { git = "https://github.com/canyon-network//substrate", branch = "w3f-grant-1" }

[features]
runtime-benchmarks = ["canyon-cli/runtime-benchmarks"]
try-runtime = ["canyon-cli/try-runtime"]
