[package]
name = "canyon-cli"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"
build = "build.rs"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1" }
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
parking_lot = "0.11.1"
rand = "0.7.2"
serde = { version = "1.0.102", features = ["derive"] }
structopt = { version = "0.3.8", optional = true }

# primitives
sp-authority-discovery = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-authorship = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-consensus = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-consensus-babe = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-finality-grandpa = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-inherents = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-io = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-keyring = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-keystore = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-timestamp = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false }
sp-transaction-pool = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

# client dependencies
sc-authority-discovery = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-basic-authorship = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-chain-spec = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-client-api = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-client-db = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false }
sc-consensus = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-consensus-babe = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-consensus-slots = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-consensus-uncles = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-finality-grandpa-warp-sync = { git = "https://github.com/canyon-network/substrate", branch = "canyon", optional = true }
sc-network = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-offchain = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-rpc = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-service = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false  }
sc-telemetry = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-transaction-pool = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-tracing = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

# frame dependencies
pallet-authority-discovery = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
pallet-balances = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
pallet-contracts = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
pallet-grandpa = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
pallet-im-online = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false }
pallet-indices = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
pallet-staking = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
pallet-timestamp = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false }
pallet-transaction-payment = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
frame-support = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false }
frame-system = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

# canyon-specific dependencies
canyon-executor = { path = "../executor" }
canyon-inspect = { path = "../inspect", optional = true }
canyon-primitives = { path = "../primitives" }
canyon-rpc = { path = "../rpc" }
canyon-runtime = { path = "../runtime" }

cc-client-db = { path = "../client/db" }
cc-consensus-poa = { path = "../client/consensus/poa" }
pallet-permastore = { path = "../pallets/permastore" }
pallet-poa = { path = "../pallets/poa" }

# CLI-specific dependencies
sc-cli = { git = "https://github.com/canyon-network/substrate", branch = "canyon", optional = true }
frame-benchmarking-cli = { git = "https://github.com/canyon-network/substrate", branch = "canyon", optional = true }
try-runtime-cli = { git = "https://github.com/canyon-network/substrate", branch = "canyon", optional = true }

[target.'cfg(target_arch="x86_64")'.dependencies]
sc-cli = { git = "https://github.com/canyon-network/substrate", branch = "canyon", optional = true, features = ["wasmtime"] }
sc-service = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false, features = ["wasmtime"] }
sp-trie = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false, features = ["memory-tracker"] }

canyon-executor = { path = "../executor", features = ["wasmtime"] }

[dev-dependencies]
assert_cmd = "1.0"
async-std = { version = "1.6.5", features = ["attributes"] }
futures = "0.3.9"
nix = "0.19"
platforms = "1.1"
regex = "1"
serde_json = "1.0"
soketto = "0.4.2"
tempfile = "3.1.0"

sc-consensus = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-consensus-babe = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-consensus-epochs = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-keystore = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-service-test = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

[build-dependencies]
structopt = { version = "0.3.8", optional = true }

sc-cli = { git = "https://github.com/canyon-network/substrate", branch = "canyon", optional = true }

frame-benchmarking-cli = { git = "https://github.com/canyon-network/substrate", branch = "canyon", optional = true }
substrate-build-script-utils = { git = "https://github.com/canyon-network/substrate", branch = "canyon", optional = true }
substrate-frame-cli = { git = "https://github.com/canyon-network/substrate", branch = "canyon", optional = true }
try-runtime-cli = { git = "https://github.com/canyon-network/substrate", branch = "canyon", optional = true }

canyon-inspect = { path = "../inspect", optional = true }

[features]
default = ["cli"]
cli = [
	"canyon-executor/wasmi-errno",
	"canyon-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"sc-finality-grandpa-warp-sync",
	"structopt",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"canyon-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"canyon-runtime/try-runtime",
	"try-runtime-cli",
]
